SERVER-93641: Add delay when appending errors to capture late arriving async errors (#29214)